Week5/y.output
State 124 conflicts: 2 shift/reduce
State 145 conflicts: 2 reduce/reduce


Grammar

    0 $accept: prm $end

    1 prm: HEADERS MAIN_TYPE MAIN LB RB LCB BODY RCB

    2 HEADERS: HEADER HEADERS
    3        | HEADER

    4 HEADER: HASH INCLUDE LT HEADER_FILE GT
    5       | HASH INCLUDE DQUOTE HEADER2 HEADER_FILE DQUOTE

    6 HEADER2: HEADER2 VAR DIV
    7        | DIV
    8        | %empty

    9 BODY: DECLARATION_STATEMENTS BODY2

   10 BODY2: %empty
   11      | DECLARATION_STATEMENTS BODY2
   12      | PROGRAM_STATEMENTS BODY2

   13 DECLARATION_STATEMENTS: DATA_TYPE VAR_LIST SC

   14 VAR_LIST: VAR COMA VAR_LIST
   15         | ARRAY_DECLARATION COMA VAR_LIST
   16         | VAR
   17         | ARRAY_DECLARATION

   18 ARRAY_DECLARATION: VAR ARRAY_SIZE

   19 ARRAY_SIZE: ARRAY_SIZE LSQRB NUMBER RSQRB
   20           | LSQRB NUMBER RSQRB

   21 MAIN_TYPE: INT

   22 DATA_TYPE: INT
   23          | CHAR
   24          | FLOAT
   25          | DOUBLE

   26 PROGRAM_STATEMENTS: VAR_EXPN1 SC
   27                   | SC
   28                   | VAR_EXPN2 SC
   29                   | LB LOGICAL_EXPN RB QMARK LCB BODY2 RCB COLON LCB BODY2 RCB
   30                   | IF LB LOGICAL_EXPN RB LCB BODY2 RCB
   31                   | IF LB LOGICAL_EXPN RB LCB BODY2 RCB ELSE LCB BODY2 RCB
   32                   | WHILE LB LOGICAL_EXPN RB LCB BODY2 RCB
   33                   | DO LCB BODY2 RCB WHILE LB LOGICAL_EXPN RB SC
   34                   | FOR LB VAR_EXPN1 SC LOGICAL_EXPN SC VAR_EXPN2 RB LCB BODY2 RCB

   35 LOGICAL_EXPN: NOT LB LOGICAL_EXPN1 RB
   36             | LOGICAL_EXPN1

   37 LOGICAL_EXPN1: LOGICAL_EXPN1 LOGICAL_OPERATOR LOGICAL_EXPN1
   38              | LOGICAL_EXPN2
   39              | NOT LB LOGICAL_EXPN1 RB
   40              | LB LOGICAL_EXPN1 RB

   41 LOGICAL_EXPN2: A_EXPN COMP_OPERATOR A_EXPN

   42 COMP_OPERATOR: ET
   43              | GT
   44              | LT
   45              | GTE
   46              | LTE
   47              | NE

   48 LOGICAL_OPERATOR: AND
   49                 | OR

   50 VAR_EXPN1: VAR EQ A_EXPN
   51          | VAR_ARRAY_ACCESS_LHS EQ A_EXPN

   52 VAR_EXPN2: VAR ARRAY_ACCESS UPLUS
   53          | VAR ARRAY_ACCESS UMINUS
   54          | VAR UPLUS
   55          | VAR UMINUS

   56 VAR_ARRAY_ACCESS_LHS: VAR ARRAY_ACCESS

   57 VAR_ARRAY_ACCESS_RHS: VAR ARRAY_ACCESS

   58 ARRAY_ACCESS: ARRAY_ACCESS LSQRB VAR RSQRB
   59             | ARRAY_ACCESS LSQRB NUMBER RSQRB
   60             | LSQRB VAR RSQRB
   61             | LSQRB NUMBER RSQRB

   62 A_EXPN: A_EXPN PLUS A_EXPN
   63       | A_EXPN MINUS A_EXPN
   64       | A_EXPN MUL A_EXPN
   65       | A_EXPN DIV A_EXPN
   66       | A_EXPN MOD A_EXPN
   67       | A_EXPN EXP A_EXPN
   68       | LB A_EXPN RB
   69       | VAR UPLUS
   70       | VAR UMINUS
   71       | VAR
   72       | NUMBER
   73       | VAR_ARRAY_ACCESS_RHS UPLUS
   74       | VAR_ARRAY_ACCESS_RHS UMINUS
   75       | VAR_ARRAY_ACCESS_RHS


Terminals, with rules where they appear

    $end (0) 0
    error (256)
    HASH (258) 4 5
    INCLUDE (259) 4 5
    HEADER_FILE (260) 4 5
    MAIN (261) 1
    LB (262) 1 29 30 31 32 33 34 35 39 40 68
    RB (263) 1 29 30 31 32 33 34 35 39 40 68
    LCB (264) 1 29 30 31 32 33 34
    RCB (265) 1 29 30 31 32 33 34
    LSQRB (266) 19 20 58 59 60 61
    RSQRB (267) 19 20 58 59 60 61
    SC (268) 13 26 27 28 33 34
    COLON (269) 29
    QMARK (270) 29
    COMA (271) 14 15
    IF (272) 30 31
    ELSE (273) 31
    FOR (274) 34
    DO (275) 33
    WHILE (276) 32 33
    VAR <var_name> (277) 6 14 16 18 50 52 53 54 55 56 57 58 60 69 70 71
    NUMBER (278) 19 20 59 61 72
    ET (279) 42
    EQ (280) 50 51
    GT (281) 4 43
    LT (282) 4 44
    GTE (283) 45
    LTE (284) 46
    NE (285) 47
    AND (286) 48
    OR (287) 49
    NOT (288) 35 39
    DQUOTE (289) 5
    PLUS (290) 62
    MINUS (291) 63
    MUL (292) 64
    DIV (293) 6 7 65
    MOD (294) 66
    EXP (295) 67
    UPLUS (296) 52 54 69 73
    UMINUS (297) 53 55 70 74
    INT <data_type> (298) 21 22
    CHAR <data_type> (299) 23
    FLOAT <data_type> (300) 24
    DOUBLE <data_type> (301) 25


Nonterminals, with rules where they appear

    $accept (47)
        on left: 0
    prm (48)
        on left: 1
        on right: 0
    HEADERS (49)
        on left: 2 3
        on right: 1 2
    HEADER (50)
        on left: 4 5
        on right: 2 3
    HEADER2 (51)
        on left: 6 7 8
        on right: 5 6
    BODY (52)
        on left: 9
        on right: 1
    BODY2 (53)
        on left: 10 11 12
        on right: 9 11 12 29 30 31 32 33 34
    DECLARATION_STATEMENTS (54)
        on left: 13
        on right: 9 11
    VAR_LIST (55)
        on left: 14 15 16 17
        on right: 13 14 15
    ARRAY_DECLARATION (56)
        on left: 18
        on right: 15 17
    ARRAY_SIZE (57)
        on left: 19 20
        on right: 18 19
    MAIN_TYPE (58)
        on left: 21
        on right: 1
    DATA_TYPE <data_type> (59)
        on left: 22 23 24 25
        on right: 13
    PROGRAM_STATEMENTS (60)
        on left: 26 27 28 29 30 31 32 33 34
        on right: 12
    LOGICAL_EXPN (61)
        on left: 35 36
        on right: 29 30 31 32 33 34
    LOGICAL_EXPN1 (62)
        on left: 37 38 39 40
        on right: 35 36 37 39 40
    LOGICAL_EXPN2 (63)
        on left: 41
        on right: 38
    COMP_OPERATOR (64)
        on left: 42 43 44 45 46 47
        on right: 41
    LOGICAL_OPERATOR (65)
        on left: 48 49
        on right: 37
    VAR_EXPN1 (66)
        on left: 50 51
        on right: 26 34
    VAR_EXPN2 (67)
        on left: 52 53 54 55
        on right: 28 34
    VAR_ARRAY_ACCESS_LHS (68)
        on left: 56
        on right: 51
    VAR_ARRAY_ACCESS_RHS (69)
        on left: 57
        on right: 73 74 75
    ARRAY_ACCESS (70)
        on left: 58 59 60 61
        on right: 52 53 56 57 58 59
    A_EXPN (71)
        on left: 62 63 64 65 66 67 68 69 70 71 72 73 74 75
        on right: 41 50 51 62 63 64 65 66 67 68


State 0

    0 $accept: . prm $end

    HASH  shift, and go to state 1

    prm      go to state 2
    HEADERS  go to state 3
    HEADER   go to state 4


State 1

    4 HEADER: HASH . INCLUDE LT HEADER_FILE GT
    5       | HASH . INCLUDE DQUOTE HEADER2 HEADER_FILE DQUOTE

    INCLUDE  shift, and go to state 5


State 2

    0 $accept: prm . $end

    $end  shift, and go to state 6


State 3

    1 prm: HEADERS . MAIN_TYPE MAIN LB RB LCB BODY RCB

    INT  shift, and go to state 7

    MAIN_TYPE  go to state 8


State 4

    2 HEADERS: HEADER . HEADERS
    3        | HEADER .

    HASH  shift, and go to state 1

    $default  reduce using rule 3 (HEADERS)

    HEADERS  go to state 9
    HEADER   go to state 4


State 5

    4 HEADER: HASH INCLUDE . LT HEADER_FILE GT
    5       | HASH INCLUDE . DQUOTE HEADER2 HEADER_FILE DQUOTE

    LT      shift, and go to state 10
    DQUOTE  shift, and go to state 11


State 6

    0 $accept: prm $end .

    $default  accept


State 7

   21 MAIN_TYPE: INT .

    $default  reduce using rule 21 (MAIN_TYPE)


State 8

    1 prm: HEADERS MAIN_TYPE . MAIN LB RB LCB BODY RCB

    MAIN  shift, and go to state 12


State 9

    2 HEADERS: HEADER HEADERS .

    $default  reduce using rule 2 (HEADERS)


State 10

    4 HEADER: HASH INCLUDE LT . HEADER_FILE GT

    HEADER_FILE  shift, and go to state 13


State 11

    5 HEADER: HASH INCLUDE DQUOTE . HEADER2 HEADER_FILE DQUOTE

    DIV  shift, and go to state 14

    $default  reduce using rule 8 (HEADER2)

    HEADER2  go to state 15


State 12

    1 prm: HEADERS MAIN_TYPE MAIN . LB RB LCB BODY RCB

    LB  shift, and go to state 16


State 13

    4 HEADER: HASH INCLUDE LT HEADER_FILE . GT

    GT  shift, and go to state 17


State 14

    7 HEADER2: DIV .

    $default  reduce using rule 7 (HEADER2)


State 15

    5 HEADER: HASH INCLUDE DQUOTE HEADER2 . HEADER_FILE DQUOTE
    6 HEADER2: HEADER2 . VAR DIV

    HEADER_FILE  shift, and go to state 18
    VAR          shift, and go to state 19


State 16

    1 prm: HEADERS MAIN_TYPE MAIN LB . RB LCB BODY RCB

    RB  shift, and go to state 20


State 17

    4 HEADER: HASH INCLUDE LT HEADER_FILE GT .

    $default  reduce using rule 4 (HEADER)


State 18

    5 HEADER: HASH INCLUDE DQUOTE HEADER2 HEADER_FILE . DQUOTE

    DQUOTE  shift, and go to state 21


State 19

    6 HEADER2: HEADER2 VAR . DIV

    DIV  shift, and go to state 22


State 20

    1 prm: HEADERS MAIN_TYPE MAIN LB RB . LCB BODY RCB

    LCB  shift, and go to state 23


State 21

    5 HEADER: HASH INCLUDE DQUOTE HEADER2 HEADER_FILE DQUOTE .

    $default  reduce using rule 5 (HEADER)


State 22

    6 HEADER2: HEADER2 VAR DIV .

    $default  reduce using rule 6 (HEADER2)


State 23

    1 prm: HEADERS MAIN_TYPE MAIN LB RB LCB . BODY RCB

    INT     shift, and go to state 24
    CHAR    shift, and go to state 25
    FLOAT   shift, and go to state 26
    DOUBLE  shift, and go to state 27

    BODY                    go to state 28
    DECLARATION_STATEMENTS  go to state 29
    DATA_TYPE               go to state 30


State 24

   22 DATA_TYPE: INT .

    $default  reduce using rule 22 (DATA_TYPE)


State 25

   23 DATA_TYPE: CHAR .

    $default  reduce using rule 23 (DATA_TYPE)


State 26

   24 DATA_TYPE: FLOAT .

    $default  reduce using rule 24 (DATA_TYPE)


State 27

   25 DATA_TYPE: DOUBLE .

    $default  reduce using rule 25 (DATA_TYPE)


State 28

    1 prm: HEADERS MAIN_TYPE MAIN LB RB LCB BODY . RCB

    RCB  shift, and go to state 31


State 29

    9 BODY: DECLARATION_STATEMENTS . BODY2

    LB      shift, and go to state 32
    SC      shift, and go to state 33
    IF      shift, and go to state 34
    FOR     shift, and go to state 35
    DO      shift, and go to state 36
    WHILE   shift, and go to state 37
    VAR     shift, and go to state 38
    INT     shift, and go to state 24
    CHAR    shift, and go to state 25
    FLOAT   shift, and go to state 26
    DOUBLE  shift, and go to state 27

    $default  reduce using rule 10 (BODY2)

    BODY2                   go to state 39
    DECLARATION_STATEMENTS  go to state 40
    DATA_TYPE               go to state 30
    PROGRAM_STATEMENTS      go to state 41
    VAR_EXPN1               go to state 42
    VAR_EXPN2               go to state 43
    VAR_ARRAY_ACCESS_LHS    go to state 44


State 30

   13 DECLARATION_STATEMENTS: DATA_TYPE . VAR_LIST SC

    VAR  shift, and go to state 45

    VAR_LIST           go to state 46
    ARRAY_DECLARATION  go to state 47


State 31

    1 prm: HEADERS MAIN_TYPE MAIN LB RB LCB BODY RCB .

    $default  reduce using rule 1 (prm)


State 32

   29 PROGRAM_STATEMENTS: LB . LOGICAL_EXPN RB QMARK LCB BODY2 RCB COLON LCB BODY2 RCB

    LB      shift, and go to state 48
    VAR     shift, and go to state 49
    NUMBER  shift, and go to state 50
    NOT     shift, and go to state 51

    LOGICAL_EXPN          go to state 52
    LOGICAL_EXPN1         go to state 53
    LOGICAL_EXPN2         go to state 54
    VAR_ARRAY_ACCESS_RHS  go to state 55
    A_EXPN                go to state 56


State 33

   27 PROGRAM_STATEMENTS: SC .

    $default  reduce using rule 27 (PROGRAM_STATEMENTS)


State 34

   30 PROGRAM_STATEMENTS: IF . LB LOGICAL_EXPN RB LCB BODY2 RCB
   31                   | IF . LB LOGICAL_EXPN RB LCB BODY2 RCB ELSE LCB BODY2 RCB

    LB  shift, and go to state 57


State 35

   34 PROGRAM_STATEMENTS: FOR . LB VAR_EXPN1 SC LOGICAL_EXPN SC VAR_EXPN2 RB LCB BODY2 RCB

    LB  shift, and go to state 58


State 36

   33 PROGRAM_STATEMENTS: DO . LCB BODY2 RCB WHILE LB LOGICAL_EXPN RB SC

    LCB  shift, and go to state 59


State 37

   32 PROGRAM_STATEMENTS: WHILE . LB LOGICAL_EXPN RB LCB BODY2 RCB

    LB  shift, and go to state 60


State 38

   50 VAR_EXPN1: VAR . EQ A_EXPN
   52 VAR_EXPN2: VAR . ARRAY_ACCESS UPLUS
   53          | VAR . ARRAY_ACCESS UMINUS
   54          | VAR . UPLUS
   55          | VAR . UMINUS
   56 VAR_ARRAY_ACCESS_LHS: VAR . ARRAY_ACCESS

    LSQRB   shift, and go to state 61
    EQ      shift, and go to state 62
    UPLUS   shift, and go to state 63
    UMINUS  shift, and go to state 64

    ARRAY_ACCESS  go to state 65


State 39

    9 BODY: DECLARATION_STATEMENTS BODY2 .

    $default  reduce using rule 9 (BODY)


State 40

   11 BODY2: DECLARATION_STATEMENTS . BODY2

    LB      shift, and go to state 32
    SC      shift, and go to state 33
    IF      shift, and go to state 34
    FOR     shift, and go to state 35
    DO      shift, and go to state 36
    WHILE   shift, and go to state 37
    VAR     shift, and go to state 38
    INT     shift, and go to state 24
    CHAR    shift, and go to state 25
    FLOAT   shift, and go to state 26
    DOUBLE  shift, and go to state 27

    $default  reduce using rule 10 (BODY2)

    BODY2                   go to state 66
    DECLARATION_STATEMENTS  go to state 40
    DATA_TYPE               go to state 30
    PROGRAM_STATEMENTS      go to state 41
    VAR_EXPN1               go to state 42
    VAR_EXPN2               go to state 43
    VAR_ARRAY_ACCESS_LHS    go to state 44


State 41

   12 BODY2: PROGRAM_STATEMENTS . BODY2

    LB      shift, and go to state 32
    SC      shift, and go to state 33
    IF      shift, and go to state 34
    FOR     shift, and go to state 35
    DO      shift, and go to state 36
    WHILE   shift, and go to state 37
    VAR     shift, and go to state 38
    INT     shift, and go to state 24
    CHAR    shift, and go to state 25
    FLOAT   shift, and go to state 26
    DOUBLE  shift, and go to state 27

    $default  reduce using rule 10 (BODY2)

    BODY2                   go to state 67
    DECLARATION_STATEMENTS  go to state 40
    DATA_TYPE               go to state 30
    PROGRAM_STATEMENTS      go to state 41
    VAR_EXPN1               go to state 42
    VAR_EXPN2               go to state 43
    VAR_ARRAY_ACCESS_LHS    go to state 44


State 42

   26 PROGRAM_STATEMENTS: VAR_EXPN1 . SC

    SC  shift, and go to state 68


State 43

   28 PROGRAM_STATEMENTS: VAR_EXPN2 . SC

    SC  shift, and go to state 69


State 44

   51 VAR_EXPN1: VAR_ARRAY_ACCESS_LHS . EQ A_EXPN

    EQ  shift, and go to state 70


State 45

   14 VAR_LIST: VAR . COMA VAR_LIST
   16         | VAR .
   18 ARRAY_DECLARATION: VAR . ARRAY_SIZE

    LSQRB  shift, and go to state 71
    COMA   shift, and go to state 72

    $default  reduce using rule 16 (VAR_LIST)

    ARRAY_SIZE  go to state 73


State 46

   13 DECLARATION_STATEMENTS: DATA_TYPE VAR_LIST . SC

    SC  shift, and go to state 74


State 47

   15 VAR_LIST: ARRAY_DECLARATION . COMA VAR_LIST
   17         | ARRAY_DECLARATION .

    COMA  shift, and go to state 75

    $default  reduce using rule 17 (VAR_LIST)


State 48

   40 LOGICAL_EXPN1: LB . LOGICAL_EXPN1 RB
   68 A_EXPN: LB . A_EXPN RB

    LB      shift, and go to state 48
    VAR     shift, and go to state 49
    NUMBER  shift, and go to state 50
    NOT     shift, and go to state 76

    LOGICAL_EXPN1         go to state 77
    LOGICAL_EXPN2         go to state 54
    VAR_ARRAY_ACCESS_RHS  go to state 55
    A_EXPN                go to state 78


State 49

   57 VAR_ARRAY_ACCESS_RHS: VAR . ARRAY_ACCESS
   69 A_EXPN: VAR . UPLUS
   70       | VAR . UMINUS
   71       | VAR .

    LSQRB   shift, and go to state 61
    UPLUS   shift, and go to state 79
    UMINUS  shift, and go to state 80

    $default  reduce using rule 71 (A_EXPN)

    ARRAY_ACCESS  go to state 81


State 50

   72 A_EXPN: NUMBER .

    $default  reduce using rule 72 (A_EXPN)


State 51

   35 LOGICAL_EXPN: NOT . LB LOGICAL_EXPN1 RB
   39 LOGICAL_EXPN1: NOT . LB LOGICAL_EXPN1 RB

    LB  shift, and go to state 82


State 52

   29 PROGRAM_STATEMENTS: LB LOGICAL_EXPN . RB QMARK LCB BODY2 RCB COLON LCB BODY2 RCB

    RB  shift, and go to state 83


State 53

   36 LOGICAL_EXPN: LOGICAL_EXPN1 .
   37 LOGICAL_EXPN1: LOGICAL_EXPN1 . LOGICAL_OPERATOR LOGICAL_EXPN1

    AND  shift, and go to state 84
    OR   shift, and go to state 85

    $default  reduce using rule 36 (LOGICAL_EXPN)

    LOGICAL_OPERATOR  go to state 86


State 54

   38 LOGICAL_EXPN1: LOGICAL_EXPN2 .

    $default  reduce using rule 38 (LOGICAL_EXPN1)


State 55

   73 A_EXPN: VAR_ARRAY_ACCESS_RHS . UPLUS
   74       | VAR_ARRAY_ACCESS_RHS . UMINUS
   75       | VAR_ARRAY_ACCESS_RHS .

    UPLUS   shift, and go to state 87
    UMINUS  shift, and go to state 88

    $default  reduce using rule 75 (A_EXPN)


State 56

   41 LOGICAL_EXPN2: A_EXPN . COMP_OPERATOR A_EXPN
   62 A_EXPN: A_EXPN . PLUS A_EXPN
   63       | A_EXPN . MINUS A_EXPN
   64       | A_EXPN . MUL A_EXPN
   65       | A_EXPN . DIV A_EXPN
   66       | A_EXPN . MOD A_EXPN
   67       | A_EXPN . EXP A_EXPN

    ET     shift, and go to state 89
    GT     shift, and go to state 90
    LT     shift, and go to state 91
    GTE    shift, and go to state 92
    LTE    shift, and go to state 93
    NE     shift, and go to state 94
    PLUS   shift, and go to state 95
    MINUS  shift, and go to state 96
    MUL    shift, and go to state 97
    DIV    shift, and go to state 98
    MOD    shift, and go to state 99
    EXP    shift, and go to state 100

    COMP_OPERATOR  go to state 101


State 57

   30 PROGRAM_STATEMENTS: IF LB . LOGICAL_EXPN RB LCB BODY2 RCB
   31                   | IF LB . LOGICAL_EXPN RB LCB BODY2 RCB ELSE LCB BODY2 RCB

    LB      shift, and go to state 48
    VAR     shift, and go to state 49
    NUMBER  shift, and go to state 50
    NOT     shift, and go to state 51

    LOGICAL_EXPN          go to state 102
    LOGICAL_EXPN1         go to state 53
    LOGICAL_EXPN2         go to state 54
    VAR_ARRAY_ACCESS_RHS  go to state 55
    A_EXPN                go to state 56


State 58

   34 PROGRAM_STATEMENTS: FOR LB . VAR_EXPN1 SC LOGICAL_EXPN SC VAR_EXPN2 RB LCB BODY2 RCB

    VAR  shift, and go to state 103

    VAR_EXPN1             go to state 104
    VAR_ARRAY_ACCESS_LHS  go to state 44


State 59

   33 PROGRAM_STATEMENTS: DO LCB . BODY2 RCB WHILE LB LOGICAL_EXPN RB SC

    LB      shift, and go to state 32
    SC      shift, and go to state 33
    IF      shift, and go to state 34
    FOR     shift, and go to state 35
    DO      shift, and go to state 36
    WHILE   shift, and go to state 37
    VAR     shift, and go to state 38
    INT     shift, and go to state 24
    CHAR    shift, and go to state 25
    FLOAT   shift, and go to state 26
    DOUBLE  shift, and go to state 27

    $default  reduce using rule 10 (BODY2)

    BODY2                   go to state 105
    DECLARATION_STATEMENTS  go to state 40
    DATA_TYPE               go to state 30
    PROGRAM_STATEMENTS      go to state 41
    VAR_EXPN1               go to state 42
    VAR_EXPN2               go to state 43
    VAR_ARRAY_ACCESS_LHS    go to state 44


State 60

   32 PROGRAM_STATEMENTS: WHILE LB . LOGICAL_EXPN RB LCB BODY2 RCB

    LB      shift, and go to state 48
    VAR     shift, and go to state 49
    NUMBER  shift, and go to state 50
    NOT     shift, and go to state 51
